# claude-fleet

./: .gitignore  README.md  README.zh-CN.md  app.py  pyproject.toml  run.bat
.github/workflows/: ci.yml  release.yml
core/: actions.py  cli.py  codex.py  history.py  insights.py  live.py  metrics.py  notify.py  opencode.py  patrol.py  perms.py  redaction.py  remote.py  sessions.py  share.py  terminal.py  transcripts.py
fixtures/: seed.py
scripts/: build-app.sh  gen-screenshots.sh  remote-collector.py  test.sh
static/: index.html
tests/: test_actions.py  test_api.py  test_build_app.py  test_cli.py  test_codex_tracking.py  test_focus_actions.py  test_fork_node.py  test_handoff.py  test_history.py  test_history_filters.py  test_live.py  test_metrics.py  test_notify.py  test_patrol.py  test_perf_cache.py  test_perms.py  test_plan_title.py  test_remote.py  test_remote_collector.py  test_share.py  test_terminal.py  test_timeline_search.py
